# hyperspy_gui_ipywidgets

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  appveyor.yml  hyperspy_extension.yaml  prepare_release.py  pyproject.toml  releasing_guide.md  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml
hyperspy_gui_ipywidgets/: __init__.py  axes.py  conftest.py  custom_widgets.py  hyperspy_extension.yaml  microscope_parameters.py  model.py  preferences.py  roi.py  tools.py  utils.py  version.py
hyperspy_gui_ipywidgets/tests/: __init__.py  test_axes.py  test_import.py  test_microscope_parameters.py  test_model.py  test_preferences.py  test_roi.py  test_tools.py  utils.py
